--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <p>Real-time venue energy via AI + human check-ins.</p>
     <p><strong>Family at Thomson Lamination Co. (SpaceX supplier)</strong> → now mapping nightlife vibes.</p>
     <div class="badge">LIVE 8-SEC MVP</div>
-    <img src="8secVibeHere.gif" alt="VibeHere Demo">
+    <video width="100%" autoplay loop muted playsinline>
+  <source src="8secVibeHere.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
     <p>Grok-powered event discovery for X?</p>
     <footer>
         © 2025 [Your Name] | Trademarked | Demo Only<br>
