--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VibeHere™ Demo</title>
     <style>
-        body { font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; background: #000; color: #fff; }
-        h1 { color: #00ff88; font-size: 2.2em; margin: 20px 0; }
-        p { max-width: 600px; margin: 15px auto; line-height: 1.6; }
-        img { max-width: 90%; height: auto; border: 3px solid #00ff88; border-radius: 12px; margin: 20px 0; }
-        .badge { background: #00ff88; color: #000; padding: 8px 16px; border-radius: 20px; font-weight: bold; display: inline-block; margin: 10px; }
+        body { background: black; color: #00ff88; font-family: Arial; text-align: center; padding: 30px; }
+        h1 { font-size: 2.5em; }
+        p { max-width: 600px; margin: 20px auto; }
+        img { max-width: 90%; border: 3px solid #00ff88; border-radius: 15px; margin: 20px 0; }
+        .badge { background: #00ff88; color: black; padding: 10px 20px; border-radius: 25px; font-weight: bold; }
         footer { margin-top: 50px; font-size: 12px; opacity: 0.7; }
     </style>
 </head>
 <body>
     <h1>VibeHere™ (USPTO #74294201)</h1>
-    <p>Real-time venue energy via AI + human check-ins.</p>
+    <p>Real-time venue energy via AI + check-ins.</p>
     <p><strong>Family at Thomson Lamination Co. (SpaceX supplier)</strong> → now mapping nightlife vibes.</p>
-    <div class="badge">LIVE 8-SEC MVP</div>
-    <video width="100%" autoplay loop muted playsinline>
-  <source src="8secVibeHere.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+    <div class="badge">LIVE MVP DEMO</div>
+    <img src="demo.jpg" alt="Check-in → Vibe Meter → Badge">
     <p>Grok-powered event discovery for X?</p>
     <footer>
         © 2025 [Your Name] | Trademarked | Demo Only<br>
-        <a href="https://vmdvito.github.io/VibeHere-Demo" style="color:#00ff88;">vmdvito.github.io/VibeHere-Demo</a>
+        vmdvito.github.io/VibeHere-Demo
     </footer>
 </body>
 </html>
