--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
         © 2025 [Your Name] | Trademarked | Demo Only<br>
         vmdvito.github.io/VibeHere-Demo
     </footer>
-</body>
+</body><p>Version 1.0 - Live for Elon 🚀</p>
 </html>
